Small refactor.